--- a/web/templates/base.html
+++ b/web/templates/base.html
@@ -6,6 +6,7 @@
   <link rel="stylesheet" href="{{ url_for('static', filename='css/foundation.css') }}">
   <link rel="stylesheet" href="{{ url_for('static', filename='css/app.css') }}">
 
+  {% block scripts %}{% endblock %}
 </head>
 <body>
   <div class="row">
