--- a/web/templates/land.html
+++ b/web/templates/land.html
@@ -1,14 +1,12 @@
 {% extends "base.html" %}
-{% block title %} Search {% endblock %}
+{% block title %} graphcity {% endblock %}
+{% block scripts %}{% endblock %}
 {% block body %}
 	<h1>graphcity</h1>
 	<form action="/search" method="POST">
 		
 		<label for="selCity1">Choose a city</label>
 		<select id="selCity1" name="city1"></select>
-		
-		<label for="selCity2">Choose another city</label>
-		<select id="selcity2" name="city2"></select>
 		
 		<!--<input type="text" placeholder="Search for a book" name="user_search" required />-->
 		<!--<input type="text" placeholder="Enter another city-->
