--- a/web/static/css/app.css
+++ b/web/static/css/app.css
@@ -54,3 +54,24 @@ li {
     list-style-type: none;
     padding-bottom: 25px;
 }
+
+form input[type="text"] {
+align-self: center;
+height: 28px;
+width: 300px;
+margin: 0;
+padding: 0;
+font-size: 15px;
+border: 1px solid #CCCCCC;
+}
+
+form input[type="submit"] {
+align-self: center;
+height: 28px;
+width: 80px;
+margin: 0;
+padding: 0;
+font-size: 15px;
+background-color: #FFFFFF;
+border: 1px solid #CCCCCC;
+} 
