--- a/web/templates/land.html
+++ b/web/templates/land.html
@@ -5,9 +5,10 @@
 	<h1>graphcity</h1>
 	<form action="/search" method="POST">
 		
-		<label for="selCity1">Choose a city</label>
-		<select id="selCity1" name="city1"></select>
-		
+		{{ msg }}
+		<!--<select id="selCity1" name="city1"></select>-->
+		<input type="text" placeholder="please enter a city" name="city1">
+		<!--<input type="text" placeholder="please enter a city" name="city2">-->
 		<!--<input type="text" placeholder="Search for a book" name="user_search" required />-->
 		<!--<input type="text" placeholder="Enter another city-->
 		
