--- a/web/templates/search.html
+++ b/web/templates/search.html
@@ -2,50 +2,49 @@
 {% block title %} graphcity {% endblock %}
 {% block headscripts %}
 <script src="//d3js.org/d3.v3.min.js" charset="utf-8"></script>
+
+<style>
+
+.node {
+  stroke: #fff;
+  stroke-width: 1.5px;
+}
+
+.link {
+  stroke: #999;
+  stroke-opacity: .6;
+}
+
+</style>
 {% endblock %}
 {% block body %}
 <h5>graphcity</h5>
+<ul>
+
+</ul>
 <div id="graph"></div>
 
-{% block bodyscripts %}
+
 	<script type="text/javascript" charset="utf-8">
-		
-		
-		
-		var citycount = {{ citycount }};
+		/*
 		var w = 800, h = 600;
-		var force = d3.layout.force()
-			.charge(-120)
-			.linkDistance(30)
-			.size([w,h]);
 		
 		var vis = d3.select("#graph")
 			.append("svg");
 		
 		vis.attr("width", w)
 			.attr("height", h);
-			
-		/* This will be an endpoint */
-		d3.json("static/fake.json", function(error, graph) {
-			if(error) throw error;
-			
-			force
-				.nodes(graph.nodes)
-				.links(graph.links)
-				.start();
-		});
 		
-		/*
-		var angle = (2 * Math.PI) / citycount;
-		var citydist = 100;
-		var startAngle = Math.PI / 2;
+		var angle = (2 * Math.PI) / 5;
+		var citydist = 250;
+		var startAngle = Math.PI;
 		
-		
+		var citycount = 5
 		vis.text("The Graph")
 			.select("#graph");
 		
 		for(var i = 0; i < citycount; i++) {
-			var thisAngle = (i + 1) * angle;
+			var thisAngle = (i + 1) * angle + startAngle;
 			
 			var x = citydist * Math.cos(thisAngle);
 			var y = citydist * Math.sin(thisAngle);
@@ -56,6 +55,83 @@
 				.attr("r", 50);
 		}
 		*/
+		
+		
+		var color = d3.scale.category20();
+		//var citycount = {{ citycount }};
+		var w = 800, h = 600;
+		var force = d3.layout.force()
+			.charge(-1000)
+			.linkDistance(200)
+			.size([w,h]);
+		
+		
+		var vis = d3.select("#graph")
+			.append("svg");
+		
+		vis.attr("width", w)
+			.attr("height", h);
+			
+		
+		d3.json("/cityinfo/{{cityname}}", function(error, graph) {
+			if(error) throw error;
+			
+			force
+				.nodes(graph.nodes)
+				.links(graph.links)
+				.start();
+
+			var link = vis.selectAll(".link")
+				.data(graph.links)
+				.enter().append("line")
+				.attr("class","link")
+				.style("stroke-width", function(d) { return Math.sqrt(100 * d.value); });
+			
+			var node = vis.selectAll(".node")
+				.data(graph.nodes)
+				.enter().append("circle")
+				.attr("class", "node")
+				.attr("r", function(d) { return 75 * d.cityweight; })
+				.style("fill", function(d) { return color(d.group); })
+				.call(force.drag)
+				.on("click", function(_ctrl) {
+					//console.log(_ctrl);
+					window.location.href = "/details/{{ cityname }}/" + _ctrl.name;
+				});
+			
+			node.append("title")
+				.text(function(d) { return d.name; });
+			
+			/*
+			var nodeNames = [];
+			for(var i = 0; i < graph.nodes.length; i++) {
+				nodeNames.push(graph.nodes[i]["name"]);
+			}
+			*/
+			/*
+			var nodeText = vis.selectAll(".nodeText")
+				.data(nodeNames)
+				.enter().append("text")
+				.attr("class", "nodeText")
+				.text(function(d) { return d; });
+			*/
+			
+			force.on("tick", function() {
+				link.attr("x1", function(d) { return d.source.x; })
+					.attr("y1", function(d) { return d.source.y; })
+					.attr("x2", function(d) { return d.target.x; })
+					.attr("y2", function(d) { return d.target.y; });
+
+				node.attr("cx", function(d) { return d.x; })
+					.attr("cy", function(d) { return d.y; });
+				
+				/*
+				nodeText.attr("x", function(d) { return d.x; })
+					.attr("y", function(d) { return d.y; });
+				*/
+				
+			});
+		}); 
 	</script>
-{% endblock %}
+
 {% endblock %}
