--- a/web/templates/details.html
+++ b/web/templates/details.html
@@ -18,10 +18,88 @@
 </style>
 {% endblock %}
 {% block body %}
-<h5>graphcity</h5>
+
 	<table>
 		<th>City</th><th>Country</th><th>Population</th><th>Area</th><th>Density</th>
 		<tr><td>{{source.city.name}}</td><td>{{source.country}}</td><td>{{source.population}}</td><td>{{source.area}}</td><td>{{source.density}}</td></tr>
 		<tr><td>{{target.city.name}}</td><td>{{target.country}}</td><td>{{target.population}}</td><td>{{target.area}}</td><td>{{target.density}}</td></tr>
 	</table>
+	<a href="/">Home</a>
+<h5>graphcity</h5>
+
+<div id="graph"></div>
+	
+	<script type="text/javascript" charset="utf-8">
+		
+		var color = d3.scale.category20();
+		//var citycount = {{ citycount }};
+		var w = 800, h = 600;
+		var force = d3.layout.force()
+			.charge(-1000)
+			.linkDistance(200)
+			.size([w,h]);
+		
+		
+		var vis = d3.select("#graph")
+			.append("svg");
+		
+		vis.attr("width", w)
+			.attr("height", h);
+			
+		
+		d3.json("/citydata/{{source.city.name}}/{{target.city.name}}", function(error, deets) {
+			if(error) throw error;
+			
+			var graph = {"nodes": [], "links": []};
+			graph.nodes.push({"name": deets.source.city, "group": 0, "cityweight":1});
+			graph.nodes.push({"name": deets.target.city, "group": 0, "cityweight":1});
+			
+			var i = 3;
+			for(var k in deets.target) {
+				graph.nodes.push({"name": k, "group": 1, "cityweight":1});
+				graph.links.push({"source": i, "target": 0, "value":1});
+				graph.links.push({"source": i, "target": 1, "value":1});
+				i = i + 1;
+			}
+			
+			console.log(graph);
+			
+			force
+				.nodes(graph.nodes)
+				.links(graph.links)
+				.start();
+
+			var link = vis.selectAll(".link")
+				.data(graph.links)
+				.enter().append("line")
+				.attr("class","link")
+				.style("stroke-width", function(d) { return Math.sqrt(100 * d.value); });
+			
+			var node = vis.selectAll(".node")
+				.data(graph.nodes)
+				.enter().append("circle")
+				.attr("class", "node")
+				.attr("r", function(d) { return 50 * (d.cityweight); })
+				.style("fill", function(d) { return color(d.group); })
+				.call(force.drag);
+			
+			node.append("title")
+				.text(function(d) { return d.name; });
+			
+			force.on("tick", function() {
+				link.attr("x1", function(d) { return d.source.x; })
+					.attr("y1", function(d) { return d.source.y; })
+					.attr("x2", function(d) { return d.target.x; })
+					.attr("y2", function(d) { return d.target.y; });
+
+				node.attr("cx", function(d) { return d.x; })
+					.attr("cy", function(d) { return d.y; });
+			
+			//console.log(graph);
+			});
+			
+		});
+		 
+	</script>
+
 {% endblock %}
